--- a/ecommerce/Web.config
+++ b/ecommerce/Web.config
@@ -6,11 +6,9 @@
 <configuration>
   
   <system.web>
-        <customErrors mode="Off"/>
+        <customErrors mode="On"/>
     </system.web>
-<system.web>
-        <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
-    </system.web>  
+
   
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
