--- a/ecommerce/Web.config
+++ b/ecommerce/Web.config
@@ -33,7 +33,7 @@
 
   </appSettings>
   <system.web>
-
+  <customErrors mode="Off"/>
     
     <globalization culture="pt-BR" uiCulture="pt-BR" enableClientBasedCulture="false" />
 
